mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_wrong_return.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux_compiler run /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_wrong_return.mux`
error: Type mismatch: expected int, got string
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_wrong_return.mux:3:10
   |
 3 |   return "str"
   |          ^^^^^
